--- a/ComputerMonitoringSystem/packages.config
+++ b/ComputerMonitoringSystem/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ControlzEx" version="4.3.0" targetFramework="net472" />
+  <package id="MahApps.Metro" version="2.0.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="2.1.2" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="4.8.0" targetFramework="net472" />
+  <package id="MaterialDesignThemes.MahApps" version="0.2.8" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
@@ -29,6 +34,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="5.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
